@@ -37,7 +37,7 @@ public abstract class DocIdSetIterator {
   /**
    * Returns the following:
    * <ul>
-   * <li>-1 or {@link #NO_MORE_DOCS} if {@link #nextDoc()} or
+   * <li><code>-1</code> if {@link #nextDoc()} or
    * {@link #advance(int)} were not called yet.
    * <li>{@link #NO_MORE_DOCS} if the iterator has exhausted.
    * <li>Otherwise it should return the doc ID it is currently on.
@@ -96,8 +96,7 @@ public abstract class DocIdSetIterator {
   /** Slow (linear) implementation of {@link #advance} relying on
    *  {@link #nextDoc()} to advance beyond the target position. */
   protected final int slowAdvance(int target) throws IOException {
-    assert docID() == NO_MORE_DOCS // can happen when the enum is not positioned yet
-        || docID() < target;
+    assert docID() < target;
     int doc;
     do {
       doc = nextDoc();
